[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/title/logo.png" type="Texture" id=1]
[ext_resource path="res://Assets/player_ani/player1back.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Title Screen.gd" type="Script" id=3]
[ext_resource path="res://Assets/player_ani/player1front.png" type="Texture" id=4]
[ext_resource path="res://Assets/player_ani/player1side.png" type="Texture" id=5]
[ext_resource path="res://Assets/title/splash.png" type="Texture" id=6]
[ext_resource path="res://Assets/player_ani/player1side2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fblapix-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Music/zapsplat_office_calculator_button_press_single_002_11984.mp3" type="AudioStream" id=9]
[ext_resource path="res://Music/zapsplat_multimedia_game_sound_fun_magic_game_positive_event_notification_002_61005.mp3" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 13 )

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="DynamicFont" id=12]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="DynamicFontData" id=20]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=21]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 20 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "end_hover"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.933333, 0.933333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "start_hover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.378929, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.933333, 0.933333, 0.933333, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -341.0
margin_top = -192.5
margin_right = 341.0
margin_bottom = 192.5
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 95, 231 )
scale = Vector2( 5.07031, 5.07031 )
frames = SubResource( 10 )
frame = 2
playing = true

[node name="Logo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -22.0
margin_right = 148.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="NewGame" type="Button" parent="Buttons"]
margin_right = 296.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/focus = SubResource( 16 )
text = "STart Game"
flat = true
icon_align = 1

[node name="Multiplayer" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 296.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/focus = SubResource( 43 )
text = "Multiplayer"
flat = true
icon_align = 1

[node name="LevelSelect" type="Button" parent="Buttons"]
margin_top = 96.0
margin_right = 296.0
margin_bottom = 132.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 17 )
text = "Level select"
flat = true
icon_align = 1

[node name="Leaderboard" type="Button" parent="Buttons"]
margin_top = 144.0
margin_right = 296.0
margin_bottom = 180.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/focus = SubResource( 43 )
text = "Leaderboard"
flat = true
icon_align = 1

[node name="small" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -63.0
margin_right = 167.0
margin_bottom = -12.0
custom_constants/separation = -6

[node name="Controls" type="Button" parent="small"]
margin_right = 172.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/focus = SubResource( 19 )
text = "Controls"
flat = true
align = 2

[node name="Credits" type="Button" parent="small"]
margin_top = 21.0
margin_right = 172.0
margin_bottom = 48.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/focus = SubResource( 44 )
text = "Credits"
flat = true

[node name="Exit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -58.0
margin_right = -20.0
margin_bottom = -22.0
rect_scale = Vector2( 0.996617, 1.01108 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.87451, 0, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.768627, 0.768627, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 15 )
text = "quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/end_hover = SubResource( 9 )
anims/start_hover = SubResource( 8 )

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0

[connection signal="mouse_entered" from="Buttons/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="Buttons/Multiplayer" to="." method="_on_Leaderboard_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Multiplayer" to="." method="_on_Leaderboard_mouse_exited"]
[connection signal="pressed" from="Buttons/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="mouse_entered" from="Buttons/LevelSelect" to="." method="_on_LevelSelect_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/LevelSelect" to="." method="_on_LevelSelect_mouse_exited"]
[connection signal="pressed" from="Buttons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="mouse_entered" from="Buttons/Leaderboard" to="." method="_on_Leaderboard_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Leaderboard" to="." method="_on_Leaderboard_mouse_exited"]
[connection signal="pressed" from="Buttons/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="mouse_entered" from="small/Controls" to="." method="_on_Controls_mouse_entered"]
[connection signal="mouse_exited" from="small/Controls" to="." method="_on_Controls_mouse_exited"]
[connection signal="pressed" from="small/Controls" to="." method="_on_Controls_pressed"]
[connection signal="mouse_entered" from="small/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="mouse_exited" from="small/Credits" to="." method="_on_Credits_mouse_exited"]
[connection signal="pressed" from="small/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
